# hagit

./: .gitignore  README.md  hagit.cabal  stack.yaml
src/: Args.hs  Branch.hs  Checkout.hs  Commit.hs  Diff.hs  DirTree.hs  DirTreeUtils.hs  Hash.hs  Hashing.hs  Index.hs  Init.hs  Log.hs  Main.hs  Status.hs  Utils.hs
tests/src/: IndexTests.hs  ObjectTest.hs  ObjectsTests.hs  StatusTests.hs  TestRunner.hs
