name:                hagit
version:             0.1.0.0
synopsis:            Basic version control system
description:         Please see README.md
homepage:            
license:             GPL-3
license-file:        LICENSE
author:              Paweł Rzepiński
copyright:           2018 Paweł Rzepiński
category:            Development
build-type:          Simple
cabal-version:       >=1.10

test-suite hagit-testsuite
  type:                     exitcode-stdio-1.0
  main-is:                  TestRunner.hs
  hs-source-dirs:           tests/src, src
  default-language:    Haskell2010
  other-modules:       Args,
                      Init,
                      Index,
                      Commit,
                      Checkout,
                      Log,
                      Status,
                      Hashing,
                      Utils,
                      Diff,
                      Branch,
                      ObjectsTests,
                      StatusTests,
                      DiffTests
  build-depends:       base >= 4.7 && < 5,
                            test-framework >= 0.3.3,
                            test-framework-quickcheck2 >= 0.2.9,
                            test-framework-hunit,
                            HUnit,
                            QuickCheck >= 2.4.0.1,
                            cryptohash,
                            bytestring,
                            directory,
                            filepath,
                            containers,
                            time,
                            conduit,
                            strict,
                            Diff
                            
executable hagit
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Args,
                       Init,
                       Index,
                       Commit,
                       Checkout,
                       Log,
                       Status,
                       Hashing,
                       Utils,
                       Diff,
                       Branch
  build-depends:       base >= 4.7 && < 5,
                       cryptohash,
                       bytestring,
                       directory,
                       filepath,
                       containers,
                       time,
                       conduit,
                       strict,
                       Diff